Changed the /urls/doi end point to use a query parameter.
